[package]
name = "cfwlogd"
version = "0.1.0"
authors = ["Mike Zeller <mike@mikezeller.net>"]
edition = "2018"

[dependencies]
crossbeam = "0.7"
vminfod-client = { path = "../vminfod-client" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nom = "5.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
pretty_env_logger = "0.3"
log = "0.4"
signal-hook = "0.1"
libc = "0.2"
daemonize = "0.4.1"
illumos-priv = "0.1.0"

[dev-dependencies]
testutils = { path = "../testutils" }
rand = "0.6"
