[package]
name = "vminfod-client"
version = "0.1.0"
authors = ["Mike Zeller <mike@mikezeller.net>"]
edition = "2018"

[dependencies]
hyper = "0.12.25"
futures = "0.1.25"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
crossbeam-channel = "0.3.8"
tokio = "0.1.17"
log = "0.4.6"
